--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,21 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 28
+    minSdkVersion = 15
+    targetSdkVersion = 28
+    kotlinVersion = '1.5.0'
+    supportLibVersion = '1.2.0'
+    coreVersion = '1.3.2'
+    recyclerViewVersion = '1.2.0'
+    constraintLayoutVersion = '2.0.4'
+    materialVersion = '1.3.0'
+    lifecycleVersion = '2.4.0-alpha02'
+    roomVersion = '2.3.0'
+    pagingVersion = '3.0.1'
+    retrofitVersion = '2.9.0'
+    okhttpLoggingInterceptorVersion = '4.9.0'
+    coroutines = '1.4.3'
+}
